lib-names musty be relative in example
git-svn-id: http://datacenter.gradsoft.ua/repos/termwareex@16945 e6263924-d73c-0410-abf9-b8ad5fbdd136

--- a/demo/build.xml
+++ b/demo/build.xml
@@ -7,11 +7,7 @@
    
     <taskdef name="jpe" classname="ua.gradsoft.jpe.ant.JPETask">
       <classpath>
-        <pathelement location="${jpehome}/lib/JPE.jar" />
-        <pathelement location="${jpehome}/lib/TermWare2.jar" />
-        <pathelement location="${jpehome}/lib/JavaChecker2.jar" />
-        <pathelement location="${jpehome}/lib/JavaChecker2Annotations.jar" />
-        <pathelement location="${jpehome}/lib/TermWareJPP.jar" />
+        <fileset dir="${jpehome}/lib" includes="**/*.jar" />
       </classpath>
     </taskdef>
 
