--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,8 +5,8 @@ build.generated.sources.dir=${build.dir}/generated-sources
 endorsed.classpath=
 excludes=
 file.reference.ant-1.7.1.jar=lib/ant-1.7.1.jar
-file.reference.JavaChecker-2.5.2.jar=lib/JavaChecker-2.5.2.jar
-file.reference.JavaChecker2Annotations-2.5.2.jar=lib/JavaChecker2Annotations-2.5.2.jar
+file.reference.JavaChecker-2.5.3.jar=lib/JavaChecker-2.5.3.jar
+file.reference.JavaChecker2Annotations-2.5.3.jar=lib/JavaChecker2Annotations-2.5.3.jar
 file.reference.TermWare-2.3.3.jar=lib/TermWare-2.3.3.jar
 file.reference.TermWareJPP-1.1.3.jar=lib/TermWareJPP-1.1.3.jar
 includes=**
@@ -34,9 +34,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.TermWare-2.3.3.jar}:\
     ${file.reference.TermWareJPP-1.1.3.jar}:\
-    ${file.reference.JavaChecker-2.5.2.jar}:\
-    ${file.reference.JavaChecker2Annotations-2.5.2.jar}:\
-    ${file.reference.ant-1.7.1.jar}
+    ${file.reference.ant-1.7.1.jar}:\
+    ${file.reference.JavaChecker-2.5.3.jar}:\
+    ${file.reference.JavaChecker2Annotations-2.5.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
