fixed errors in devirtualization process
git-svn-id: http://datacenter.gradsoft.ua/repos/termwareex@16953 e6263924-d73c-0410-abf9-b8ad5fbdd136

--- a/build.xml
+++ b/build.xml
@@ -18,6 +18,7 @@
     <target name="clean-all" depends="clean">
       <delete>
        <fileset dir="lib" includes="**/*.jar" />
+       <fileset dir="final-distributives" includes="**/*" />
       </delete>
     </target>
 
